Update Product Type

--- a/src/Web/DamaAdmin/Server/appsettings.json
+++ b/src/Web/DamaAdmin/Server/appsettings.json
@@ -9,6 +9,7 @@
     "ClientId": "",
     "CallbackPath": "/signin-oidc"
   },
+  "WebProductTypesPictureV2FullPath": "..\\..\\DamaWeb\\wwwroot\\images\\producttypes\\v2\\",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
