--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,38 +1,12 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Dama Admin Server Launch",
+            "name": "Launch DamaAdmin",
             "type": "blazorwasm",
             "request": "launch",
-            "preLaunchTask": "build-blazor",
-            "cwd": "${workspaceFolder}/src/Web/DamaAdmin/Server",
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        },
-        {
-            "name": "Backoffice Launch (web)",
-            "type": "coreclr",
-            "request": "launch",
-            "preLaunchTask": "build-backoffice",
-            "program": "${workspaceFolder}/src/Web/Backoffice/bin/Debug/net5.0/Backoffice.dll",
-            "args": [],
-            "cwd": "${workspaceFolder}/src/Web/Backoffice",
-            "stopAtEntry": false,
-            "serverReadyAction": {
-                "action": "openExternally",
-                "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-            },
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            },
-            "sourceFileMap": {
-                "/Views": "${workspaceFolder}/Views"
-            }
+            "url": "https://localhost:5001",
+            "cwd": "${workspaceFolder}/src/Web/DamaAdmin/Server"
         }
     ]
 }
