--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build-blazor",
+            "label": "build",
             "command": "dotnet",
             "type": "process",
             "args": [
@@ -13,42 +13,29 @@
             ],
             "problemMatcher": "$msCompile"
         },
-        // {
-        //     "label": "publish",
-        //     "command": "dotnet",
-        //     "type": "process",
-        //     "args": [
-        //         "publish",
-        //         "${workspaceFolder}/src/Web/DamaAdmin/Server/DamaAdmin.Server.csproj",
-        //         "/property:GenerateFullPaths=true",
-        //         "/consoleloggerparameters:NoSummary"
-        //     ],
-        //     "problemMatcher": "$msCompile"
-        // },
         {
-            "label": "watch-blazor",
+            "label": "publish",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/src/Web/DamaAdmin/Server/DamaAdmin.Server.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
+            "label": "watch",
             "command": "dotnet",
             "type": "process",
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/src/Web/DamaAdmin/Server/DamaAdmin.Server.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "--project",
+                "${workspaceFolder}/src/Web/DamaAdmin/Server/DamaAdmin.Server.csproj"
             ],
             "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "build-backoffice",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "build",
-                "${workspaceFolder}/src/Web/Backoffice/Backoffice.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
+        }
     ]
 }
