Blazor Product Create (with images)

--- a/src/Web/DamaAdmin/Server/appsettings.json
+++ b/src/Web/DamaAdmin/Server/appsettings.json
@@ -9,7 +9,6 @@
     "ClientId": "",
     "CallbackPath": "/signin-oidc"
   },
-  "WebProductTypesPictureV2FullPath": "..\\..\\DamaWeb\\wwwroot\\images\\producttypes\\v2\\",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -17,5 +16,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebProductTypesPictureV2Uri": "http://localhost:5500/images/producttypes/v2/",
+  "WebProductTypesPictureV2FullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\v2\\",
+  "WebProductsPictureUri": "http://localhost:5500/images/products/",
+  "WebProductsPictureV2Uri": "http://localhost:5500/images/products/v2/",
+  "WebProductsPictureFullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\products\\",
+  "WebProductsPictureV2FullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\products\\v2\\",
+  "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/"
 }
